exemplo com mais de uma tool